syntax = "proto2";
package xproto;
option go_package = ".;xproto";

// 特殊牌型
enum SpecialType{
  Special_None = 0;  // 无效牌型
  // 三顺子 每一墩都是顺子（如  23456、45678、789）
  Three_Straight = 1;
  // 三同花 每一墩花色相同（如 第一墩都是梅花 第二墩都是方块）
  Three_Flush = 2;
  // 六对半
  SixPairs_HighCard = 3;
  // 五对 加 三条
  FivePairs_ThreeOfAKind = 4;
  // 一点黑
  One_Black = 5;
  // 一点红
  One_Red = 6;
  // 清一色 (全黑或全红 可以方块红桃混合)
  Pure_One_Suit = 7;
  // 一条龙
  All_Straight = 8;
  // 至尊清龙
  All_StraightFlush = 9;
}
// 牌组类型
enum CardHandType {
  CardHand_None = 0;  // 无效牌型
  // 单张
  HighCard = 1;
  // 对牌
  OnePair = 2;
  // 两对牌：数值相同的两张牌
  TwoPairs = 3;
  // 三条 Three of a kind
  ThreeOfAKind= 4;
  // 顺子(蛇)	Straight
  Straight = 5;
  // 同花(花)	Flush
  Flush = 6;
  // 葫芦
  FullHouse = 7;
  // 四条 Four of a Kind：四张同点牌 + 一张
  Four = 8;
  // 同花顺	Straight Flush 五张或更多的连续单牌（如： 45678 或 78910JQK ）
  StraightFlush = 9;
}

// 一手牌局结束
// 可能的结果是：流局、有人赢牌
enum HandOverType {
  // 没有胡牌，或者流局
  enumHandOverType_None = 0;
  // 赢牌
  enumHandOverType_Win = 1;
  // 输牌
  enumHandOverType_Loss = 2;
}

// 动作类型
// 注意为了能够用一个int合并多个动作
// 因此所有动作的值均为二进制bit field独立
enum ActionType {
  // 无效动作
  enumActionType_None = 0;
  // 出牌
  enumActionType_DISCARD = 1;
}
